tests/rgs/valid/named_story_with_phases.rgs
STORY quest PRIORITY 1.
    ACTION complete.
    EVENT finished ENVIRONMENT.
    PHASE active.
    PHASE done.
    AGENT Hero:
        DURING active:
            WHEN finished ENVIRONMENT:
                ENTER done.
