tests/rgs/semantic_errors/undeclared_phase_in_enter.rgs
STORY quest PRIORITY 1.
    ACTION run.
    EVENT spotted ENVIRONMENT.
    PHASE active.
    AGENT Hero:
        DURING active:
            WHEN spotted ENVIRONMENT:
                ENTER missing_phase.
